Fixed Image Alignment

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -44,7 +44,7 @@
     width: 12.6vw;
     height: 22.7vw;
     margin-right: 0;
-    margin-top: 50px;
+    margin-top: 3vw;
 }
 .home-text {
     margin-left: 1vw;
